tests/golden/error/visibility_sibling/sibling_b.tg
// Sibling B tries to access sibling A's private type — should fail.

fn use_sibling_private() -> Nat {
    let x: sibling_a::SecretType = 42;
    x
}
